Fix some dark mode styles

--- a/src/components/ui/Input/styles.module.css
+++ b/src/components/ui/Input/styles.module.css
@@ -1,15 +1,15 @@
 :root {
-    --border-color: #ccc;
+    --input-border-color: #ccc;
 }
 
 [data-theme="dark"] {
-    --border-color: #757474;
+    --input-border-color: #575757;
 }
 
 .input {
     padding: 0.5rem 1rem !important;
     margin-bottom: 0.6rem !important;
-    border: 1px solid var(--border-color) !important;
+    border: 1px solid var(--input-border-color) !important;
     border-radius: 8px !important;
     font-size: 1rem !important;
 }
