--- a/src/pages/map/styles.module.css
+++ b/src/pages/map/styles.module.css
@@ -1,4 +1,11 @@
-/* Desktop defaults */
+:root {
+    --map-drawer-bg-color: white;
+}
+
+[data-theme="dark"] {
+    --map-drawer-bg-color: #242526;
+}
+
 .grid {
     display: flex;
 }
@@ -8,7 +15,7 @@
     padding: 10px;
     overflow-y: scroll;
     flex-shrink: 0;
-    background: white;
+    background: var(--map-drawer-bg-color);
 }
 
 .mobileToggle {
@@ -31,7 +38,6 @@
         height: 100vh;
         width: 80%;
         max-width: 320px;
-        background: white;
         box-shadow: 0 0 20px rgba(0,0,0,0.3);
         transform: translateX(-100%);
         transition: transform 0.3s ease;
@@ -53,6 +59,7 @@
         padding: 10px 14px;
         border-radius: 6px;
         box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+        color: black;
         font-size: 20px;
         cursor: pointer;
     }
@@ -60,7 +67,6 @@
     .drawerClose {
         display: block;
         margin-bottom: 10px;
-        background: #eee;
         border: none;
         padding: 10px;
         width: 100%;
