--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -1,7 +1,7 @@
 .beta {
     display: flex;
     justify-content: space-between;
-    background-color: var(--purple);
+    background-color: #383c7a;
     color: white;
     padding: 2px 20px;
     font-weight: bold;
